# half-baked

./: README.md
hb1-button-ref/: README.md  bower.json  package.json
hb1-button-ref/src/: Main.purs
hb2-fileinputs/: README.md  bower.json
hb2-fileinputs/src/: Main.purs
hb3-filesending/: README.md  bower.json  cabal.project  hb3-filesending.cabal  package.json
hb3-filesending/hssrc/: Main.hs
hb3-filesending/src/: Main.purs
hb3-filesending/static/: index.html
hb4-button-reflex/: README.md
hb4-button-reflex/src/: Main.hs
hb5-fileinput-reflex/: README.md
hb5-fileinput-reflex/src/: Main.hs
hb6-filesending-reflex/: README.md  cabal.project  hb6-filesending.cabal
hb6-filesending-reflex/client/: Main.hs
hb6-filesending-reflex/server/: Main.hs
hb6-filesending-reflex/static/: out.js  out.stats
hb7-bootstrap-reflex/: README.md  hb7-boostrap-reflex.cabal  hb7-bootstrap-reflex.cabal
hb7-bootstrap-reflex/css/: styles.css
hb7-bootstrap-reflex/html/: index.html
hb7-bootstrap-reflex/src/: Main.hs
hb8-nixos-adventure/: .ghci  .tmux.conf  README.md  config.nix  default.nix  ghci.conf  index2.html  jswai.hs  reflex-dom-htmlea.nix  vimtips.txt
