Name:                hb3-filesending
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             BSD2
Author:              gspia
Maintainer:          
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False


Executable hb3-filesending
  hs-source-dirs: hssrc
  main-is: Main.hs

  Build-depends:
    aeson                     >= 1.1     && < 1.5,
    bytestring                >= 0.9.1   && < 0.11,
    directory                 >= 1.3     && < 1.5,
    heist                     >= 1.0     && < 1.1,
    map-syntax                >= 0.2     && < 0.3,
    monad-control             >= 1.0     && < 1.1,
    mtl                       >= 2       && < 3,
    either                    >= 4.4     && < 4.5,
    snap                      >= 1.0     && < 1.1,
    snap-core                 >= 1.0.2   && < 1.1,
    snap-server               >= 1.0     && < 1.1,
    -- snap-loader-static        >= 1.0     && < 1.1,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.7,
    xmlhtml                   >= 0.1,
    base                      >= 4.4     && < 6,
    lens                      >= 3.7.6   && < 4.16,
    websockets                >= 0.10.0.0 && < 0.11,
    websockets-snap           >= 0.10.2.2 && < 0.11,
    process                   >= 1.4.3.0 && < 1.5,
    transformers              >= 0.5.2.0 && < 0.6


  if flag(development)
    build-depends:
      snap-loader-dynamic >= 1.0 && < 1.1
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    -- -fprint-potential-instances
    ghc-options: -threaded -w -rtsopts "-with-rtsopts=-N"
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
                   -rtsopts "-with-rtsopts=-N"
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
                   -rtsopts "-with-rtsopts=-N"

                  
