name:                hb7-boostrap-reflex
version:             0.1.0.0
synopsis:            Using boostrap with reflex
description:         Initial steps to start using boostrap with reflex. In addition to that,
                     this sets a cabal file to build a ghcjs-reflex-based app.
                     See README.md -file.
license:             BSD2
license-file:        LICENSE
author:              gspia
maintainer:          gspia
build-type:          Simple
cabal-version:       >=1.24

Flag include-ghc-stubs
  Description:   Generate GHC stub functions for GHCJS only functions.
                 This allows compilation under GHC when using GHCJS only functions.
  Default:       True

executable bs4reflex
  hs-source-dirs: src
  main-is:        Main.hs

  build-depends:
    base                   >= 4.9    && < 5,
    bytestring             >= 0.10.8 && < 0.11,
    containers             >= 0.5.7  && < 0.6,
    data-default           >= 0.7.1  && < 0.8,
    ghcjs-dom              >= 0.7    && < 0.10,
    http-types             >= 0.9.1  && < 0.10,
    jsaddle                >= 0.8    && < 0.10,
    lens                   >= 4.15   && < 5,
    mtl                    >= 2.2.1  && < 2.3,
    ref-tf                 >= 0.4    && < 0.5,
    reflex                 >= 0.5    && < 0.6,
    reflex-dom             ,
    reflex-dom-core        >= 0.4    && < 0.5,
    safe                   >= 0.3    && < 0.4,
    text                   >= 1.2    && < 1.3

    -- aeson                  >= 0.8    && < 1.2,
    -- base64-bytestring      >= 1.0    && < 1.1,
    -- bifunctors             >= 5.4.2  && < 5.5,
    -- readable               >= 0.3.1  && < 0.4,
    -- exception-transformers >= 0.4    && < 0.5,
    -- random                 >= 1.1    && < 1.2,
    -- stm                    >= 2.4.4  && < 2.5,
    -- string-conv            >= 0.1.2  && < 0.2,
    -- transformers           >= 0.5.2  && < 0.6,
    -- uri-bytestring         >= 0.2.3  && < 0.3,
    -- time                   >= 1.5    && < 1.7,

  if impl(ghcjs)
    build-depends:
                  ghcjs-base >= 0.2 && < 0.3,
                  ghcjs-prim >= 0.1 && < 0.2

  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs

  if flag(include-ghc-stubs)
    cpp-options: -DGHCSTUBS
